Amend the documentation navigation
This change removes redundant content and unnecessary indentation. This
should make it look both more professional and easier to use.

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,3 +1,2 @@
-* The Android App
-** xref:android_app.adoc[Android App]
-** xref:release_notes.adoc[Release Notes]
+* xref:android_app.adoc[Using the Android App]
+* xref:release_notes.adoc[Release Notes]
